[package]
name = "bevy-jam-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy-inspector-egui = "0.18.3"
bevy_asset_loader = { version = "0.16.0", features = ["2d"] }
bevy_kira_audio = { version = "0.15.0", features = ["ogg"] }